ticket #103 fixed lint issues