@@ -580,7 +580,7 @@ public class SyncAVTransportPlayer extends AbstractPlayer {
 
             @Override
             public void received(ActionInvocation actionInvocation, boolean currentMute) {
-                actionState.result = new Boolean(currentMute);
+                actionState.result = Boolean.valueOf(currentMute);
 
             }
         };
@@ -676,7 +676,7 @@ public class SyncAVTransportPlayer extends AbstractPlayer {
 
             @Override
             public void received(ActionInvocation actionInvocation, int currentVolume) {
-                actionState.result = new Integer(currentVolume);
+                actionState.result = Integer.valueOf(currentVolume);
 
             }
         };
